# cpp-learning

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Src/: CMakeLists.txt
Src/first-gui/: CMakeLists.txt  first_gui_main_window.cpp  first_gui_main_window.hpp  first_gui_main_window.ui  main.cpp
Src/toilet_runner/: CMakeLists.txt  main.cpp
Src/toilet_runner/app/: runner.cpp  runner.hpp
Src/zdm/: CMakeLists.txt  toilet.cpp  toilet.hpp
Src/zdm/metap/: factorial.cpp  factorial.hpp  if.hpp
Tests/: CMakeLists.txt
Tests/zdm/: toilet.test.cpp
Tests/zdm/metap/: factorial.test.cpp  if.test.cpp
